<resources>
    <string name="app_name">Stash</string>
    <string name="stash_it">Stash It</string>
    <string name="sign_in">Sign-In</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="create_account">Create an Account</string>
    <string name="new_account">New Account</string>
    <string name="stash">Stash</string>
    <string name="about">About</string>
    <string name="add_link">Add Link</string>
    <string name="sign_out">Sign-Out</string>
    <string name="required">Required</string>
    <string name="type_or_paste_link_here">type or paste link here</string>
    <string name="sharebutton">shareButton</string>
    <string name="view">View</string>
    <string name="today">Today</string>
    <string name="past_week">Past Week</string>
    <string name="past_month">Past Month</string>
    <string name="all">All</string>
    <string name="your_list_is_empty">Your Stash is Empty</string>
    <string name="empty_stash_list_note">Use the Share Icon from your favorite apps to share to Stash. \n\nManually add links by tapping the link icon at the top of the screen. Then type or paste the url and tap the -Stash It- button.</string>
    <string name="past_24_hours">Past 24 Hours</string>
    <string name="link_image">Link Image</string>
    <string name="shareicon">ShareIcon</string>
    <string name="password_reset">Password Reset</string>
    <string name="enter_your_email_below_and_tap_the_reset_password_button_below">enter your email below and tap the \'reset password\' button below</string>
    <string name="email_abcdefg_com">email@abcdefg.com</string>
    <string name="reset_password">Reset Password</string>
    <string name="logo_image">Logo Image</string>
    <string name="or">OR</string>
    <string name="just_sign_in_with_your_google_account">To get started, sign In with Your Google account by tapping the button below</string>
    <string name="tap_here_to_create_an_account">Tap Here to Create an Account</string>
    <string name="tap_here_to_sign_in">Tap Here to Sign In</string>
    <string name="showing_past_24_hours">Showing Past 24 Hours</string>
    <string name="showing_past_week">Showing Past Week</string>
    <string name="showing_past_month">Showing Past Month</string>
    <string name="showing_all">Showing All</string>
    <string name="showing_all_stash_s">Showing All Stash\'s</string>
    <string name="help">Help</string>
    <string name="date_range">Date Range</string>
    <string name="help_delete_stash_text">To Delete a link from your list, long press on the card you wish to delete. Then you will be prompted to confirm the deletion.</string>
    <string name="help_share_stashed_link">To share your stashed link with other people, tap the share icon on the card</string>
    <string name="stashlogo">StashLogo</string>
    <string name="delete_links">Delete Links</string>
    <string name="share_links">Share Links</string>
    <string name="add_links">Add Links</string>
    <string name="stash_version">Stash v1.0.1</string>
    <string name="build_date">Build Date: 3–9–2020\nby Michael May\nBombadu</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="_01_01_2020_8_45_pm">01.01.2020 8:45 Pm</string>
    <string name="close">close</string>


</resources>
