...
                android:gravity="center_horizontal"
                android:text="@string/view"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">


                <RadioButton
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/past_month"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textSize="18sp" />

            </RadioGroup>
...
