<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">

...
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/add_link_layout"
        app:layout_constraintStart_toStartOf="@id/recycler_view"
        app:layout_constraintEnd_toEndOf="@id/recycler_view"
        app:layout_constraintBottom_toTopOf="@id/recycler_view">

    </TextView>


...
